--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@babylonjs/core": "^6.7.0",
-    "@babylonjs/materials": "^6.7.0",
-    "@rollup/plugin-commonjs": "^25.0.1",
-    "@rollup/plugin-node-resolve": "^15.1.0",
-    "@rollup/plugin-typescript": "^11.1.1",
-    "rollup": "^3.25.1",
-    "tslib": "^2.5.3",
-    "typescript": "^5.1.3"
+    "@babylonjs/core": "^6.41.0",
+    "@babylonjs/materials": "^6.41.0",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.6",
+    "rollup": "^4.9.6",
+    "tslib": "^2.6.2",
+    "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@rollup/plugin-url": "^8.0.2",
+    "rollup-plugin-css-only": "^4.5.2"
   }
 }
