--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@babylonjs/havok": "^1.3.1",
     "@rollup/plugin-url": "^8.0.2",
     "rollup-plugin-css-only": "^4.5.2"
   }
